--- a/app/views/public/events/_search.erb
+++ b/app/views/public/events/_search.erb
@@ -1,26 +1,26 @@
 
     <div class="col-md-4 mt-5">
       <div class="container border border-dark">
-       <div class="text-center border-bottom">検索</div>
-        <div class="container">
-        <!--検索-->
-          <%= form_with url: event_result_path(events), method: :get, class: "form-inline justify-content-between" do |f| %>
-            <div class="mt-2 mb-2">
-              <%= f.text_field :keyword, placeholder: "キーワードを入力" %>
+        <%= form_with url: event_result_path(events), method: :get do |f| %>
+          <div class="text-center border-bottom">検索</div>
+            <div class="container">
+              <div class="mt-2 mb-2">
+                <%= f.text_field :keyword, placeholder: "キーワードを入力" %>
+              </div>
+              <div class="mb-2">
+                <%= f.date_field :start_date, value: Date.today %>
+                <%= f.select :prefecture, Prefecture.names %>
+              </div>
+              <div class="mb-2">
+                <%= f.collection_check_boxes :category_ids, Category.all, :id, :name do |b| %>
+                  <%= b.label {b.check_box + b.text} %><br>
+                <% end %>
+              </div>
+              <div class="mb-2 text-right">
+                <%= f.submit "検索", class: "btn btn-primary" %>
+              </div>
             </div>
-            <div class="mb-2">
-              <%= f.date_field :start_date, value: Date.today %>
-              <%= f.select :prefecture, Prefecture.names %>
-            </div>
-            <div class="mb-2">
-              <%= f.collection_check_boxes :category_ids, Category.all, :id, :name do |b| %>
-                <%= b.check_box + b.text %><br>
-              <% end %>
-            </div>
-            <div class="mb-2">
-              <%= f.submit "検索", class: "btn btn-primary" %>
-            </div>
-          <% end %>
-        </div>
+
+        <% end %>
       </div>
     </div>
