--- a/app/views/public/events/show.html.erb
+++ b/app/views/public/events/show.html.erb
@@ -27,36 +27,9 @@
           <div class="mt-2">
             <p>開催日時：<%= @event.date.strftime("%Y/%m/%d") %> <%= @event.time.strftime("%H:%M") %></p>
             <p>開催地：<%= Prefecture.names.invert[@event.prefecture_id] %> <%= @event.place %></p>
-            <script type="text/javascript">
-             function initMap() {
-               var test = {lat: <%= @event.latitude ||= 0 %>, lng: <%= @event.longitude ||= 0 %>};
-               var map = new google.maps.Map(document.getElementById('map'), {
-                         zoom: 15,
-                         center: test
-                         });
-               var transitLayer = new google.maps.TransitLayer();
-               transitLayer.setMap(map);
-               var contentString = '住所：<%= @event.place %>';
-               var infowindow = new google.maps.InfoWindow({
-                 content: contentString
-               });
-               var marker = new google.maps.Marker({
-                             position:test,
-                             map: map
-                           });
-               marker.addListener('click', function() {
-                 infowindow.open(map, marker);
-               });
-             }
-            </script>
-            <style type="text/css">
-              #map { height: 300px;
-                    width: 100%;}
-            </style>
-            <script async defer
-                       src="https://maps.googleapis.com/maps/api/js?v=3.exp&key=<%= ENV['GOOGLE_MAP_API_KEY'] %>&callback=initMap">
-            </script>
-            <div id="map"></div>
+
+            <!--Google api 部分テンプレート-->
+            <%= render 'map', event: @event %>
 
             <div class="mt-2">
               <p>募集人数：<%= @event.number %>人</p>
@@ -143,7 +116,7 @@
           <div class="media-body ml-2">
             <h6 class="mt-0"><%= comment.user.full_name %></h6>
             <p><%= comment.created_at.strftime('%Y/%m/%d') %></p>
-            <p><%= comment.comment %></p>
+            <p><%= simple_format(comment.comment, sanitize: true) %></p>
             <% if user_signed_in? && comment.user == current_user %>
               <%= link_to "削除", event_comment_path(comment.event, comment), method: :delete, class: "text-danger", data: {confirm: "コメントを削除しますか？"}  %>
             <% end %>
