--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -105,7 +105,7 @@
       <% end %>
       <%= yield %>
 
-      <a href="#top" class="scroll-top-btn">
+      <a class="scroll-top-btn">
         <i class="fa-solid fa-arrow-up-long" style="color: #2ff47a;"></i>
       </a>
 
