--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -105,8 +105,8 @@
       <% end %>
       <%= yield %>
 
-      <a class="scroll-top-btn">
-        <i class="fa-solid fa-arrow-up-long" style="color: #2ff47a;"></i>
+      <a href="#top" class="scroll-top-btn">
+        <i class="fa-solid fa-arrow-up-long" style="color: #2ff47a;" title="ページ最上部へ"></i>
       </a>
 
     </main>
