--- a/app/views/public/events/result.html.erb
+++ b/app/views/public/events/result.html.erb
@@ -4,80 +4,23 @@
     <div class="container mt-4">
       <div class="mx-auto col-md-10 mt-2">
         <% if @events.any? %>
-          <% @events.each do |event| %>
-            <% if event.date >= Date.today %>
-              <div class="row border m-3">
 
-                <div class="col">
-                  <!--画像-->
-                    <% if event.image.attached? %>
-                      <%= image_tag event.image, class: "img-fluid" %>
-                    <% else %>
-                      <%= image_tag 'no_image.jpg', class: "img-fluid" %>
-                    <% end %>
-                </div>
-
-                <div class="col mt-2">
-                  <!--イベント情報-->
-                  <div class="ml-1 mt-1"><h4><%= link_to event.name, event_path(event.id) %></h4></div>
-                    <% event.event_categories.each do |event| %>
-                      <span class="badge badge-primary mr-2"><%= event.category.name %></span>
-                    <% end %>
-                  <div class="ml-1 mt-1">開催日時：<%= event.date.strftime("%Y/%m/%d") %> <%= event.time.strftime("%H:%M") %></div>
-                  <div class="ml-1 mt-1">募集人数：<%= event.number %>人</div>
-                    <% if event.fixed_number.present? %>
-                      <div class="ml-1 mt-1">・<%= event.fixed_number %>人で予約してください。</div>
-                    <% elsif event.minimum_number.present? %>
-                      <div class="ml-1 mt-1">・<%= event.minimum_number %>人以上で予約してください。</div>
-                    <% end %>
-                  <div class="ml-1 mt-1">開催地：<%= Prefecture.names.invert[event.prefecture_id] %></div>
-                  <div class="ml-1 mt-1"><イベント概要><br>
-                    <% if event.outline.length > 40 %>
-                      <%= event.outline[0, 40] + "..." %>
-                    <% else %>
-                      <%= event.outline %>
-                    <% end %>
-                  </div>
-                </div>
-              </div>
-            <% elsif event.date < Date.today %>
-              <div class="mt-4 mb-3 text-center"><h6>過去のイベント</h6></div>
-                <div class="row border m-3">
-
-                  <div class="col">
-                    <!--画像-->
-                      <% if event.image.attached? %>
-                        <%= image_tag event.image, class: "img-fluid" %>
-                      <% else %>
-                        <%= image_tag 'no_image.jpg', class: "img-fluid" %>
-                      <% end %>
-                  </div>
-
-                  <div class="col mt-2">
-                    <!--イベント情報-->
-                    <div class="ml-1 mt-1"><h4><%= link_to event.name, event_path(event.id) %></h4></div>
-                      <% event.event_categories.each do |event| %>
-                        <span class="badge badge-primary mr-2"><%= event.category.name %></span>
-                      <% end %>
-                    <div class="ml-1 mt-1">開催日時：<%= event.date.strftime("%Y/%m/%d") %> <%= event.time.strftime("%H:%M") %></div>
-                    <div class="ml-1 mt-1">募集人数：<%= event.number %>人</div>
-                      <% if event.fixed_number.present? %>
-                        <div class="ml-1 mt-1">・<%= event.fixed_number %>人で予約してください。</div>
-                      <% elsif event.minimum_number.present? %>
-                        <div class="ml-1 mt-1">・<%= event.minimum_number %>人以上で予約してください。</div>
-                      <% end %>
-                    <div class="ml-1 mt-1">開催地：<%= Prefecture.names.invert[event.prefecture_id] %></div>
-                    <div class="ml-1 mt-1"><イベント概要><br>
-                      <% if event.outline.length > 40 %>
-                        <%= event.outline[0, 40] + "..." %>
-                      <% else %>
-                        <%= event.outline %>
-                      <% end %>
-                    </div>
-                  </div>
-                </div>
+        <div class="col-md">
+          <div class="container mt-4">
+            <!--本日以降開催のイベントを表示-->
+            <% @events_run.each do |event| %>
+              <%= render "event", event: event %>
             <% end %>
-          <% end %>
+
+            <% if @events_past.present? %>
+              <div class="mt-4 mb-3 text-center"><h4 class="mt-0">過去のイベント</h4></div>
+            <% end %>
+              <% @events_past.each do |event| %>
+                <%= render "event", event: event %>
+              <% end %>
+          </div>
+        </div>
+
         <% else %>
           <div class="mt-5 ml-3 text-center"><h6>該当するイベントは見つかりませんでした。</h6></div>
         <% end %>
