--- a/app/views/public/events/_event.html.erb
+++ b/app/views/public/events/_event.html.erb
@@ -17,7 +17,7 @@
           <h4 class="mt-0"><%= link_to event.name, event_path(event.id) %></h4>
         </div>
           <% event.event_categories.each do |event| %>
-            <%= link_to events_path(cat: event.category.id), class: "text-decoration-none" do %>
+            <%= link_to title_path(cat: event.category.id), class: "text-decoration-none" do %>
               <span class="badge badge-primary mr-2 text-white">
                 <%= event.category.name %>
               </span>
