--- a/app/javascript/stylesheets/application.scss
+++ b/app/javascript/stylesheets/application.scss
@@ -63,10 +63,10 @@ header {
 
 // ハンバーガー
 #hm-icon {
-  position: fixed;
   right: 10px;
   top: 10px;
   z-index: 10;
+  color: white;
 }
 .menu-trigger,
 .menu-trigger span {
