--- a/app/views/public/reservations/show.html.erb
+++ b/app/views/public/reservations/show.html.erb
@@ -55,7 +55,9 @@
       <!-- イベント概要 -->
       <div class="row justify-content-center border-top">
         <div class="mt-3 col-md-6 text-left"><h5>概要</h5>
-          <div class="mt-3 text-break" style="word-wrap:8rem"><%= simple_format(@event.outline, sanitize: true) %></div>
+          <div class="border border-4 rounded">
+            <div class="mt-3 text-break" style="word-wrap:8rem"><%= simple_format(@event.outline, sanitize: true) %></div>
+          </div>
         </div>
       </div>
 
