--- a/app/views/public/events/show.html.erb
+++ b/app/views/public/events/show.html.erb
@@ -56,7 +56,7 @@
 
       <!-- イベント概要 -->
       <div class="row justify-content-center border-top">
-        <div class="mt-3 col-md-6 text-left"><h5>概要</h5>
+        <div class="mt-3 col-md-8 text-left"><h5>イベント説明</h5>
           <div class="border border-4 rounded">
             <div class="ml-2 mt-3 text-break" style="word-wrap:8rem"><%= simple_format(@event.outline, sanitize: true) %></div>
           </div>
