--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -94,7 +94,7 @@
                 <% else %>
                   <!-- ログインしていない場合 -->
                   <li class="nav-item">
-                      <%= link_to events_path, class: "nav-link text-white" do %>
+                      <%= link_to title_path, class: "nav-link text-white" do %>
                         イベント一覧
                       <% end %>
                   </li>
